# lau-hodge-theory

./: AGENT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
src/: hodge_star.rs  knowledge.rs  lib.rs
tests/: hodge_tests.rs
